--- a/tasks/git-clone/git-clone-pr.yaml
+++ b/tasks/git-clone/git-clone-pr.yaml
@@ -18,6 +18,7 @@ spec:
       git clone $REPO_URL $SUBDIR
       cd $SUBDIR
       git checkout $PULL_PULL_SHA
+      sed -i -e 's|com:|com/|' -e 's|git@|https://|' .gitmodules
       git submodule update --init --recursive
       echo "checked out revision: $PULL_PULL_SHA to dir: $SUBDIR"
     image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.19.0
