--- a/tasks/typescript/pullrequest.yaml
+++ b/tasks/typescript/pullrequest.yaml
@@ -64,6 +64,7 @@ spec:
             --context=/workspace/source \
             --cache=true \
             --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
+            --cache-from=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
             --dockerfile=Dockerfile \
             --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
         - image: ghcr.io/jenkins-x/jx-preview:0.0.171
