--- a/tasks/go/pullrequest.yaml
+++ b/tasks/go/pullrequest.yaml
@@ -39,13 +39,19 @@ spec:
             #!/busybox/sh
             source .jx/variables.sh
             cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
-            /kaniko/executor $KANIKO_FLAGS \
-              --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx \
-              --context=/workspace/source \
-              --cache=true \
-              --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
-              --dockerfile=Dockerfile \
-              --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
+            
+            cat Dockerfile|grep -i from|grep -i " as " "awk '{print $NF}'|\
+                xargs -n 1 -I {} sh -c "echo 'pulling $BRANCH_NAME-{}' && /kaniko/warmer --image=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$BRANCH_NAME-{}"
+  
+            cat Dockerfile |grep -i from | grep -i " as " | awk '{print $NF}' |\
+                xargs -n 1 -I {} sh -c "/kaniko/executor $KANIKO_FLAGS \
+                                    --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx \
+                                    --target {} \
+                                    --cache=true \
+                                    --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
+                                    --context=/workspace/source \
+                                    --dockerfile=Dockerfile \
+                                    --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$BRANCH_NAME-{}"
         - image: ghcr.io/jenkins-x/jx-preview:0.0.171
           name: promote-jx-preview
           resources: {}
@@ -55,5 +61,5 @@ spec:
             jx preview create
   podTemplate: {}
   serviceAccountName: tekton-bot
-  timeout: 240h0m0s
+  timeout: 20m0s
 status: {}
