--- a/tasks/go/pullrequest.yaml
+++ b/tasks/go/pullrequest.yaml
@@ -40,9 +40,10 @@ spec:
             source .jx/variables.sh
             cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
             
-            cat Dockerfile|grep -i from|grep -i " as " | awk '{print $NF}'|\
-                xargs -n 1 -I {} sh -c "echo \"pulling $BRANCH_NAME-{}\" && /kaniko/warmer --image=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$BRANCH_NAME-{}"
-  
+            echo "Loading cache"
+            cat Dockerfile|grep -i from|grep -i " as "|awk '{print $NF}'|\
+                xargs -n 1 -I {} sh -c "echo 'pulling $BRANCH_NAME-{}' && /kaniko/warmer --image=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$BRANCH_NAME-{}"
+
             cat Dockerfile |grep -i from | grep -i " as " | awk '{print $NF}' |\
                 xargs -n 1 -I {} sh -c "/kaniko/executor $KANIKO_FLAGS \
                                     --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx \
