--- a/tasks/docker-helm/release.yaml
+++ b/tasks/docker-helm/release.yaml
@@ -51,12 +51,12 @@ spec:
             source .jx/variables.sh
             cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
             /kaniko/executor $KANIKO_FLAGS \
-            --build-arg=DOCKER_REGISTRY=339765050942.dkr.ecr.eu-west-1.amazonaws.com/jx \
+            --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx/ \
             --cache=true \
-            --cache-repo=339765050942.dkr.ecr.eu-west-1.amazonaws.com/anghami/$APP_NAME \
+            --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
             --context=/workspace/source \
             --dockerfile=Dockerfile \
-            --destination=339765050942.dkr.ecr.eu-west-1.amazonaws.com/anghami:$VERSION
+            --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
         - image: gcr.io/jenkinsxio/jx-changelog:0.0.38
           name: promote-changelog
           resources: {}
