--- a/example-hooks/basic-pipeline/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/example-hooks/basic-pipeline/.lighthouse/jenkins-x/pullrequest.yaml
@@ -11,7 +11,7 @@ spec:
       taskSpec:
         metadata: {}
         stepTemplate:
-          image: uses:anghami/jx3-pipeline-catalog/tasks/ang/pullrequest.yaml@versionStream
+          image: uses:anghami/jx3-pipeline-catalog/tasks/ang/pullrequest.yaml@HEAD
           name: ""
           resources:
             requests:
@@ -24,7 +24,7 @@ spec:
           resources: {}
         - name: jx-variables
           resources: {}
-        - name: build-make-linux
+        - name: check-registry
           resources: {}
         - name: build-container-build
           resources: {}
