--- a/example-hooks/basic-pipeline/.lighthouse/jenkins-x/release.yaml
+++ b/example-hooks/basic-pipeline/.lighthouse/jenkins-x/release.yaml
@@ -11,7 +11,7 @@ spec:
       taskSpec:
         metadata: {}
         stepTemplate:
-          image: uses:anghami/jx3-pipeline-catalog/tasks/ang/release.yaml@versionStream
+          image: uses:anghami/jx3-pipeline-catalog/tasks/ang/release.yaml@HEAD
           name: ""
           resources:
             requests:
@@ -19,7 +19,7 @@ spec:
               memory: 600Mi
           workingDir: /workspace/source
         steps:
-        - image: uses:anghami/jx3-pipeline-catalog/tasks/git-clone/git-clone.yaml@versionStream
+        - image: uses:anghami/jx3-pipeline-catalog/tasks/git-clone/git-clone.yaml@HEAD
           name: ""
           resources: {}
         - name: next-version
