--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -56,8 +56,8 @@ spec:
             --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx/ \
             --build-arg=NPM_TOKEN=$NPM_TOKEN \
             --build-arg=HTTPS_GIT_CREDS=$HTTPS_GIT_CREDS \
-            --build-arg=MIX_GOOGLE_CLIENT_ID=${MIX_GOOGLE_CLIENT_ID}
-            --build-arg=MIX_GOOGLE_CLIENT_SECRET=${MIX_GOOGLE_CLIENT_SECRET}
+            --build-arg=MIX_GOOGLE_CLIENT_ID=${MIX_GOOGLE_CLIENT_ID} \
+            --build-arg=MIX_GOOGLE_CLIENT_SECRET=${MIX_GOOGLE_CLIENT_SECRET} \
             --context=/workspace/source \
             --cache=true \
             --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
