added externalsecrets and update pullrequest.yaml

--- a/jx-externalsecrets.yaml
+++ b/jx-externalsecrets.yaml
@@ -12,3 +12,15 @@ spec:
   - key: watson-jx
     name: MIX_GOOGLE_CLIENT_SECRET
     property: MIX_GOOGLE_CLIENT_SECRET
+---
+apiVersion: kubernetes-client.io/v1
+kind: ExternalSecret
+metadata:
+  name: raygun-external-token
+  namespace: jx
+spec:
+  backendType: secretsManager
+  data:
+  - key: raygun_external_token
+    name: token
+    property: token
