--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -68,6 +68,35 @@ spec:
             --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
             --dockerfile=Dockerfile \
             --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
+        - image: gcr.io/kaniko-project/executor:v1.7.0-debug
+          name: build-container-stages
+          resources: {}
+          script: |
+            #!/busybox/sh
+            source .jx/variables.sh
+            cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
+            cat Dockerfile |\
+              grep -i from |\
+              grep -i " as " |\
+              awk '{print $NF}' |\
+              xargs -n 1 -I{} bash -c "(/kaniko/executor $KANIKO_FLAGS \
+                      --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx/ \
+                      --build-arg=NPM_TOKEN=${NPM_TOKEN} \
+                      --build-arg=HTTPS_GIT_CREDS=https://${HTTPS_GIT_CREDS}@github.com \
+                      --build-arg=MIX_GOOGLE_CLIENT_ID=${MIX_GOOGLE_CLIENT_ID} \
+                      --build-arg=MIX_GOOGLE_CLIENT_SECRET=${MIX_GOOGLE_CLIENT_SECRET} \
+                      --context=/workspace/source \
+                      --cache=true \
+                      --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
+                      --dockerfile=Dockerfile \
+                      --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:stage_{}-$VERSION) || exit 255"
+        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind
+          name: docker-compose-test
+          resources: {}
+          script: |
+            #!/usr/bin/env sh
+            curl -L 'https://github.com/docker/compose/releases/download/1.28.5/docker-compose-Linux-x86_64' -o docker-compose && chmod +x docker-compose
+            ./docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
         - image: ghcr.io/jenkins-x-plugins/jx-preview:0.0.192
           name: promote-jx-preview
           resources: {}
