--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -60,7 +60,7 @@ spec:
             /kaniko/executor $KANIKO_FLAGS \
             --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx/ \
             --build-arg=NPM_TOKEN=${NPM_TOKEN} \
-            --build-arg=HTTPS_GIT_CREDS=https://${HTTPS_GIT_CREDS}@github.com \
+            --build-arg=HTTPS_GIT_CREDS=https://${GIT_TOKEN}@github.com \
             --build-arg=MIX_GOOGLE_CLIENT_ID=${MIX_GOOGLE_CLIENT_ID} \
             --build-arg=MIX_GOOGLE_CLIENT_SECRET=${MIX_GOOGLE_CLIENT_SECRET} \
             --context=/workspace/source \
@@ -75,7 +75,6 @@ spec:
             #!/busybox/sh
             source .jx/variables.sh
             cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
-            apt-get install findutils
             cat Dockerfile |\
               grep -i from |\
               grep -i " as " |\
