added NPM token external secret and reference in the PR pipeline

--- a/jx-externalsecrets.yaml
+++ b/jx-externalsecrets.yaml
@@ -24,3 +24,15 @@ spec:
   - key: raygun_external_token
     name: token
     property: token
+---
+apiVersion: kubernetes-client.io/v1
+kind: ExternalSecret
+metadata:
+  name: web2-jx
+  namespace: jx
+spec:
+  backendType: secretsManager
+  data:
+  - key: web2-jx
+    name: NPM_TOKEN
+    property: npm_token
