--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -95,7 +95,7 @@ spec:
                       --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
                       --dockerfile=Dockerfile \
                       --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:stage_{}-$VERSION) || exit 255"
-        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:docker-compose 
+        - image: docker/compose:1.25.5
           name: docker-compose-test
           resources: {}
           script: |
