testing install docker-compose

--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -101,7 +101,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             apk add docker-compose
-            ./docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
+            docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
         - image: ghcr.io/jenkins-x-plugins/jx-preview:0.0.192
           name: promote-jx-preview
           resources: {}
