--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -44,6 +44,9 @@ spec:
               cpu: 400m
               memory: 512Mi
           workingDir: /workspace/source
+          sidecars:
+          - name: dind
+            image:  339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind
         steps:
         - image: ghcr.io/jenkins-x/jx-boot:3.2.217
           name: jx-variables
@@ -95,7 +98,7 @@ spec:
                       --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
                       --dockerfile=Dockerfile \
                       --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:stage_{}-$VERSION) || exit 255"
-        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind
+        - image: docker/compose:1.25.5
           name: docker-compose-test
           resources: {}
           script: |
