--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -44,9 +44,16 @@ spec:
               cpu: 400m
               memory: 512Mi
           workingDir: /workspace/source
-          sidecars:
-          - name: dind
-            image:  339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind
+        sidecars:
+        - image: docker:18.05-dind
+          name: server
+          securityContext:
+            privileged: true
+          volumeMounts:
+            - mountPath: /var/lib/docker
+              name: dind-storage
+            - mountPath: /var/run/
+              name: dind-socket
         steps:
         - image: ghcr.io/jenkins-x/jx-boot:3.2.217
           name: jx-variables
@@ -104,6 +111,9 @@ spec:
           script: |
             #!/usr/bin/env sh
             docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
+          volumeMounts:
+          - mountPath: /var/run/
+            name: dind-socket
         - image: ghcr.io/jenkins-x-plugins/jx-preview:0.0.192
           name: promote-jx-preview
           resources: {}
