--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -50,7 +50,7 @@ spec:
         - name: dind-socket
           emptyDir: {}
         sidecars:
-        - image: docker:18.05-dind
+        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind
           name: server
           securityContext:
             privileged: true
@@ -115,6 +115,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
+            aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
             docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
           volumeMounts:
           - mountPath: /var/run/
