--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -50,7 +50,7 @@ spec:
         - name: dind-socket
           emptyDir: {}
         sidecars:
-        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind
+        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind-aws
           name: server
           securityContext:
             privileged: true
