--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -52,8 +52,8 @@ spec:
         sidecars:
         - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind-aws
           name: server
-          securityContext:
-            privileged: true
+          script: |
+            aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
           volumeMounts:
             - mountPath: /var/lib/docker
               name: dind-storage
