--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -55,8 +55,7 @@ spec:
           securityContext:
             privileged: true
           script: |
-            /usr/local/bin/aws --version
-            docker login -u AWS -p $(/usr/local/bin/aws ecr get-login-password --region eu-west-1) 339765050942.dkr.ecr.eu-west-1.amazonaws.com
+            /usr/local/bin/aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
           volumeMounts:
             - mountPath: /var/lib/docker
               name: dind-storage
@@ -118,7 +117,6 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
             docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
           volumeMounts:
           - mountPath: /var/run/
