--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -117,6 +117,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
+            export DOCKER_HOST=http+unix://var/run/docker.sock
             docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
           volumeMounts:
           - mountPath: /var/run/
