--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -52,26 +52,17 @@ spec:
         - name: dind-socket
           emptyDir: {}
         sidecars:
-        - image: docker:18.05-dind
+        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind-aws
           name: server
           securityContext:
             privileged: true
+          script: |
+            /usr/local/bin/aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
           volumeMounts:
             - mountPath: /var/lib/docker
               name: dind-storage
             - mountPath: /var/run/
               name: dind-socket
-        # - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker:20.10.11-dind-aws
-        #   name: dind
-        #   securityContext:
-        #     privileged: true
-        #   script: |
-        #     /usr/local/bin/aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
-        #   volumeMounts:
-        #     - mountPath: /var/lib/docker
-        #       name: dind-storage
-        #     - mountPath: /var/run/
-        #       name: dind-socket
         steps:
         - image: ghcr.io/jenkins-x/jx-boot:3.2.217
           name: jx-variables
@@ -132,20 +123,6 @@ spec:
           volumeMounts:
           - mountPath: /var/run/
             name: dind-socket
-        - image: docker
-          name: client
-          script: |
-            #!/usr/bin/env sh
-            cat > Dockerfile << EOF
-            FROM ubuntu
-            RUN apt-get update
-            ENTRYPOINT ["echo", "hello"]
-            EOF
-            docker build -t hello . && docker run hello
-            docker images
-          volumeMounts:
-            - mountPath: /var/run/
-              name: dind-socket
         - image: ghcr.io/jenkins-x-plugins/jx-preview:0.0.192
           name: promote-jx-preview
           resources: {}
