--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -34,8 +34,6 @@ spec:
                 key: NPM_TOKEN
           - name: HOME
             value: /tekton/home
-          - name: DOCKER_HOST
-            value: http+unix://var/run/docker.sock
           envFrom:
           - secretRef:
               name: jx-boot-job-env-vars
@@ -57,7 +55,7 @@ spec:
           securityContext:
             privileged: true
           script: |
-            /usr/local/bin/aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
+            aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
           volumeMounts:
             - mountPath: /var/lib/docker
               name: dind-storage
@@ -119,7 +117,8 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            DOCKER_HOST=$DOCKER_HOST && docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
+            aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
+            docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
           volumeMounts:
           - mountPath: /var/run/
             name: dind-socket
