--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -56,6 +56,8 @@ spec:
             privileged: true
           script: |
             aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
+            sleep(160)
+            echo "exit"
           volumeMounts:
             - mountPath: /var/lib/docker
               name: dind-storage
