--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -110,12 +110,12 @@ spec:
                       --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
                       --dockerfile=Dockerfile \
                       --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:stage_{}-$VERSION) || exit 255"
-        - image: docker/compose:1.28.5
+        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker-compose:1.28.5
           name: docker-compose-test
           resources: {}
           script: |
             #!/usr/bin/env sh
-            docker ps
+            aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
             docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
           volumeMounts:
           - mountPath: /var/run/
