--- a/tasks/ang-dind/pullrequest.yaml
+++ b/tasks/ang-dind/pullrequest.yaml
@@ -46,6 +46,21 @@ spec:
               cpu: 400m
               memory: 512Mi
           workingDir: /workspace/source
+        volumes:
+        - name: dind-storage
+          emptyDir: {}
+        - name: dind-socket
+          emptyDir: {}
+        sidecars:
+        - image: docker:18.05-dind
+          name: server
+          securityContext:
+            privileged: true
+          volumeMounts:
+            - mountPath: /var/lib/docker
+              name: dind-storage
+            - mountPath: /var/run/
+              name: dind-socket
         steps:
         - image: ghcr.io/jenkins-x/jx-boot:3.2.217
           name: jx-variables
@@ -85,6 +100,10 @@ spec:
             cat Dockerfile |\
               grep -i from |\
               grep -i " as " |\
+              awk '{print $NF}'
+            cat Dockerfile |\
+              grep -i from |\
+              grep -i " as " |\
               awk '{print $NF}' |\
               xargs -n 1 -I{} bash -c "(/kaniko/executor $KANIKO_FLAGS \
                       --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx/ \
@@ -97,6 +116,16 @@ spec:
                       --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
                       --dockerfile=Dockerfile \
                       --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:stage_{}-$VERSION) || exit 255"
+        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker-compose:1.28.5
+          name: docker-compose-test
+          resources: {}
+          script: |
+            #!/usr/bin/env sh
+            aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
+            docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
+          volumeMounts:
+          - mountPath: /var/run/
+            name: dind-socket
         - image: ghcr.io/jenkins-x-plugins/jx-preview:0.0.192
           name: promote-jx-preview
           resources: {}
