--- a/tasks/ang-dind/release.yaml
+++ b/tasks/ang-dind/release.yaml
@@ -9,7 +9,9 @@ spec:
     - name: from-build-pack
       resources: {}
       taskSpec:
-        metadata: {}
+        metadata:
+          annotations:
+            iam.amazonaws.com/role: ClusterA.jx.JenkinsX
         stepTemplate:
           env:
           - name: HOME
