--- a/tasks/ang/release.yaml
+++ b/tasks/ang/release.yaml
@@ -28,16 +28,28 @@ spec:
           workingDir: /workspace/source
         steps:
         - env:
+          - name: MIX_GOOGLE_CLIENT_SECRET
+            valueFrom:
+              secretKeyRef:
+                name: watson-build-secrets
+                key: MIX_GOOGLE_CLIENT_SECRET
+          - name: MIX_GOOGLE_CLIENT_ID
+            valueFrom:
+              secretKeyRef:
+                name: watson-build-secrets
+                key: MIX_GOOGLE_CLIENT_ID
           - name: GIT_TOKEN
             valueFrom:
               secretKeyRef:
-                key: password
                 name: tekton-git
-          - name: GIT_USER
+                key: password
+          - name: NPM_TOKEN
             valueFrom:
               secretKeyRef:
-                key: username
-                name: tekton-git
+                name: web2-jx
+                key: NPM_TOKEN
+          - name: HOME
+            value: /tekton/home
           image: ghcr.io/jenkins-x/jx-release-version:2.5.1
           name: next-version
           resources: {}
@@ -53,7 +65,7 @@ spec:
         - image: ghcr.io/jenkins-x/jx-registry:0.1.1
           name: check-registry
           resources: {}
-        - image: gcr.io/kaniko-project/executor:v1.6.0-debug
+        - image: gcr.io/kaniko-project/executor:v1.7.0-debug
           name: build-container-build
           resources: {}
           script: |
@@ -62,8 +74,10 @@ spec:
             cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
             /kaniko/executor $KANIKO_FLAGS \
             --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx/ \
-            --build-arg=NPM_TOKEN=$NPM_TOKEN \
-            --build-arg=HTTPS_GIT_CREDS=$HTTPS_GIT_CREDS \
+            --build-arg=NPM_TOKEN=${NPM_TOKEN} \
+            --build-arg=HTTPS_GIT_CREDS=https://${GIT_TOKEN}@github.com \
+            --build-arg=MIX_GOOGLE_CLIENT_ID=${MIX_GOOGLE_CLIENT_ID} \
+            --build-arg=MIX_GOOGLE_CLIENT_SECRET=${MIX_GOOGLE_CLIENT_SECRET} \
             --context=/workspace/source \
             --cache=true \
             --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
