--- a/tasks/ang-dind/pullrequest.yaml
+++ b/tasks/ang-dind/pullrequest.yaml
@@ -100,22 +100,19 @@ spec:
             cat Dockerfile |\
               grep -i from |\
               grep -i " as " |\
-              awk '{print $NF}'
-            cat Dockerfile |\
-              grep -i from |\
-              grep -i " as " |\
               awk '{print $NF}' |\
-              xargs -n 1 -I{} bash -c "(/kaniko/executor $KANIKO_FLAGS \
-                      --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx/ \
-                      --build-arg=NPM_TOKEN=${NPM_TOKEN} \
-                      --build-arg=HTTPS_GIT_CREDS=https://${GIT_TOKEN}@github.com \
-                      --build-arg=MIX_GOOGLE_CLIENT_ID=${MIX_GOOGLE_CLIENT_ID} \
-                      --build-arg=MIX_GOOGLE_CLIENT_SECRET=${MIX_GOOGLE_CLIENT_SECRET} \
-                      --context=/workspace/source \
-                      --cache=true \
-                      --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
-                      --dockerfile=Dockerfile \
-                      --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:stage_{}-$VERSION) || exit 255"
+              while read stage;do ;
+                /kaniko/executor $KANIKO_FLAGS \
+                  --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx/ \
+                  --build-arg=NPM_TOKEN=${NPM_TOKEN} \
+                  --build-arg=HTTPS_GIT_CREDS=https://${GIT_TOKEN}@github.com \
+                  --build-arg=MIX_GOOGLE_CLIENT_ID=${MIX_GOOGLE_CLIENT_ID} \
+                  --build-arg=MIX_GOOGLE_CLIENT_SECRET=${MIX_GOOGLE_CLIENT_SECRET} \
+                  --context=/workspace/source \
+                  --cache=true \
+                  --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
+                  --dockerfile=Dockerfile \
+                  --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:stage_$stage-$VERSION
         - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker-compose:1.28.5
           name: docker-compose-test
           resources: {}
