--- a/tasks/ang-dind/pullrequest.yaml
+++ b/tasks/ang-dind/pullrequest.yaml
@@ -126,6 +126,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
+            cat .jx/variables.sh
             source .jx/variables.sh
             docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
           volumeMounts:
