--- a/tasks/ang-dind/pullrequest.yaml
+++ b/tasks/ang-dind/pullrequest.yaml
@@ -127,6 +127,8 @@ spec:
             #!/usr/bin/env sh
             aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
             sh .jx/variables.sh
+            echo $VERSION
+            export VERISION=test
             docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
           volumeMounts:
           - mountPath: /var/run/
