--- a/tasks/ang/pullrequest.yaml
+++ b/tasks/ang/pullrequest.yaml
@@ -54,6 +54,7 @@ spec:
             #!/usr/bin/env sh
             jx gitops variables
             jx gitops pr variables
+            export APP_NAME=${APP_NAME//./_}
         - image: ghcr.io/jenkins-x/jx-registry:0.1.1
           name: check-registry
           resources: {}
@@ -103,7 +104,6 @@ spec:
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
-            export PREVIEW_NAMESPACE=$(echo "jx-$REPO_OWNER-$REPO_NAME-pr-$PULL_NUMBER" | tr '[:upper:]' '[:lower:]')
             export PREVIEW_URL=$(kubectl get virtualservices -n $PREVIEW_NAMESPACE $REPO_NAME -o 'jsonpath={.spec.hosts[0]}')
             jx preview create
   podTemplate: {}
