--- a/tasks/ang-dind/release.yaml
+++ b/tasks/ang-dind/release.yaml
@@ -46,6 +46,21 @@ spec:
               cpu: 400m
               memory: 512Mi
           workingDir: /workspace/source
+        volumes:
+        - name: dind-storage
+          emptyDir: {}
+        - name: dind-socket
+          emptyDir: {}
+        sidecars:
+        - image: docker:18.05-dind
+          name: server
+          securityContext:
+            privileged: true
+          volumeMounts:
+            - mountPath: /var/lib/docker
+              name: dind-storage
+            - mountPath: /var/run/
+              name: dind-socket
         steps:
         - env:
           - name: GIT_TOKEN
@@ -91,6 +106,46 @@ spec:
             --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
             --dockerfile=Dockerfile \
             --destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
+        - image: gcr.io/kaniko-project/executor:v1.7.0-debug
+          name: build-container-stages
+          resources: {}
+          script: |
+            #!/busybox/sh
+            source .jx/variables.sh
+            cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
+            cat Dockerfile |\
+              grep -i from |\
+              grep -i " as " |\
+              awk '{print $NF}' |\
+              while read stage; do
+                if [ "$stage" = "serve" ]; then
+                    destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
+                else
+                    destination=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:stage_$stage-$VERSION
+                fi
+                /kaniko/executor $KANIKO_FLAGS \
+                  --build-arg=DOCKER_REGISTRY=$DOCKER_REGISTRY/jx/ \
+                  --build-arg=NPM_TOKEN=${NPM_TOKEN} \
+                  --build-arg=HTTPS_GIT_CREDS=https://${GIT_TOKEN}@github.com \
+                  --build-arg=MIX_GOOGLE_CLIENT_ID=${MIX_GOOGLE_CLIENT_ID} \
+                  --build-arg=MIX_GOOGLE_CLIENT_SECRET=${MIX_GOOGLE_CLIENT_SECRET} \
+                  --context=/workspace/source \
+                  --target=$stage \
+                  --cache=true \
+                  --cache-repo=$DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME \
+                  --dockerfile=Dockerfile \
+                  --destination=$destination
+              done
+        - image: 339765050942.dkr.ecr.eu-west-1.amazonaws.com/docker-compose:1.28.5
+          name: docker-compose-test
+          resources: {}
+          script: |
+            #!/usr/bin/env sh
+            aws ecr get-login-password | docker login --username AWS --password-stdin 339765050942.dkr.ecr.eu-west-1.amazonaws.com
+            . ./.jx/variables.sh
+            echo $VERSION
+            export VERISION=test
+            docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit
         - image: ghcr.io/jenkins-x/jx-changelog:0.0.47
           name: promote-changelog
           resources: {}
