--- a/tasks/git-clone/git-clone-pr-submodule.yaml
+++ b/tasks/git-clone/git-clone-pr-submodule.yaml
@@ -34,7 +34,7 @@ spec:
       git fetch origin $PULL_PULL_REF:$(echo $JOB_NAME | tr '[:lower:]' '[:upper:]')-$PULL_NUMBER
       git checkout $(echo $JOB_NAME | tr '[:lower:]' '[:upper:]')-$PULL_NUMBER
       git reset --hard $PULL_PULL_SHA
-      sed -i "s|ssh://git@github.com|https://github.com|g" .gitmodules
+      sed -i "s|ssh://git@github.com:anghami|https://github.com/anghami|g" .gitmodules
       git submodule update --init --recursive
       echo "checked out revision: $PULL_PULL_REF:$(echo $JOB_NAME | tr '[:lower:]' '[:upper:]')-$PULL_NUMBER@$PULL_PULL_SHA to dir: $SUBDIR"
     workingDir: /workspace
